--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ header{
     margin-left: 20px;
 }
 .description{
-    margin-top: 158px;
+    margin-top: 114px;
     width: 783px;
     height: 453px;
     background: #E9E9E9;
@@ -158,7 +158,10 @@ header{
     width: 70%;
 }
 .swiper-slide img{
-    width: 1000px;
-    height: 900px;
+    width: 865px;
+    height: 855px;
    
+}
+.icon{
+    cursor: pointer;
 }
